--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -1,18 +1,16 @@
-.bgfoot{
-    display: flex;
-    margin-bottom: 10vw;
-}
-
 .bgfoot1{
     width: 100vw;
     height: 38vw;
-    background: linear-gradient(90deg, #bf5c40 50%, #333132 50%);
+    background: linear-gradient(90deg, #d96342 50%, #333132 50%);
+    
 }
 
 .craft{
+    display: inline-block;
     background-color: white;
     margin: 1.5vw;
-    height: 35vw
+    height: 35vw;
+    width: 97vw;
 }
 .craft p {
     text-align: center;
@@ -24,6 +22,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0vw 17vw;
+    margin-bottom: 5vw;
 }
 
 .logo1{
@@ -35,3 +34,126 @@
     padding-left: 5vw;
  }
 
+.craft button {
+    margin-left: 42.5vw;
+    border: 0.1vw solid transparent;
+    background-color: #bf5c40;
+    padding: 0.75vw 1.75vw;
+    text-decoration: none;
+    color: white;
+    font-size: 1.2vw;
+}
+
+.craft a{
+    display: inline-block;
+    margin-left: 42.5vw;
+    margin-top: 2vw;
+    text-decoration: none;
+    color: #bf5c40;
+    font-size: 1.8vw;
+    border-top: 0.1vw solid #bf5c40;
+    border-bottom: 0.1vw solid #bf5c40;
+    padding: 0.5vw 0.4vw;
+}
+.craft a:hover{
+    color: #bf5c40;
+}
+
+.moreinfo{
+    background-color: #333132;
+    height: 29vw;  
+    border-top: 0.15vw solid #bf5c40;
+}
+.moreetc{
+    display: flex;
+    padding: 0vw 5vw;
+    justify-content: space-around;
+}
+ .infoetc{
+    display: flex;
+    flex-direction: column;
+    margin-top: 2vw;
+    color: white;
+ }
+
+ .infoetc h4{
+    font-size: 0.9vw;
+    margin-bottom: 1.5vw;
+ }
+ .infoetc a{
+    font-size: 0.8vw;
+    margin-bottom: 0.5vw;
+    text-decoration: none;
+    color: white;
+ }
+
+ .follow {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2vw;
+    margin-left: 8vw;
+    margin-right: 8vw;
+    padding-top: 1vw;
+    border-top: 0.1vw solid white;
+    color: white;
+    font-size: 0.8vw;
+ }
+.follow a{
+    padding: 0vw 0.75vw;
+    text-decoration: none;
+    color: white;
+}
+ .folleft{
+    border-right: 0.1vw solid white;
+ }
+.social{
+    display: flex;
+}
+.social p{
+    padding-right: 0.5vw;
+    padding-top: 0.5vw;
+}
+ .social img{
+    width: 3vw;
+    height: 2vw;
+    padding: 0vw 0.5vw;
+ }
+
+ .descrip{
+    height: 10vw;
+    background-color: #e6e6e7;
+    padding: 2.2vw 10vw;
+ }
+
+ .descrip p{
+    text-align: center;
+    font-size: 0.7vw;
+    line-height: 1.2vw;
+ }
+ .contact {
+    display: flex;
+    justify-content: space-between;
+    padding: 4vw 7vw;
+ }
+
+ .copyright{
+    display: flex;
+    flex-direction: column;
+    font-size: 0.7vw;
+ }
+ .copyright img{
+    width: 6.5vw;
+    margin-bottom: 1vw;  
+ }
+ .copyright a{
+    color: black;
+ }
+ .address{
+    display: flex;
+    flex-direction: column;
+ }
+ .address p{
+    padding-top: 2vw;
+    font-size: 0.7vw;
+    text-align: end;
+ }
