--- a/src/component/content.css
+++ b/src/component/content.css
@@ -1,34 +1,34 @@
 .content {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10vw;
+    margin-bottom: 15vw;
 }
 
 .imgcon img {
-    width: 65vw;
-    height: 37vw;
+    width: 64.5vw;
+    height: 36.5vw;
 }
 
 .textcon {
-    margin-left: 2.5vw;
-    margin-top: 6vw;
+    margin-left: 2vw;
+    margin-top: 10vw;
 }
 
-.textcon h1 {
-    border-left: 0.2vw solid #bf5c40;
+.textcon h2 {
+    border-left: 0.15vw solid #bf5c40;
     padding: 0.5vw 0vw;
     margin-bottom: 2vw;
 }
 
 .textcon h3 {
     color: #bf5c40;
-    margin-bottom: 2vw;
+    margin-bottom: 1vw;
 }
 
 .textcon p {
-    font-size: 0.85vw;
+    font-size: 0.65vw;
     padding-right: 3vw;
-    line-height: 2vw;
+    line-height: 1.5vw;
 }
 
 
@@ -36,58 +36,63 @@
     position: absolute;
     width: 21vw;
     left: 0;
-    top: 80vw;
+    top: 85.5vw;
     z-index: -1;
 
 }
 
+.textr{
+    margin-top: 9vw;
+}
+
 .textr p {
-    padding-right: 2vw;
+    padding-right: 2.5vw;
 }
 
 .bgright {
     position: absolute;
     width: 21vw;
     right: 0;
-    top: 127vw;
+    top: 136.5vw;
     z-index: -1;
 
 }
 
 .left2 {
-    top: 174vw;
+    top: 189vw;
 }
 
 .textl2 {
-    margin-top: 1.5vw;
+    margin-top: 6vw;
 }
 
 .icon1 {
     margin-left: 3vw;
-    width: 9vw;
+    width: 7vw;
 }
 .icon2 {
-    margin-left: 8vw;
-    width: 4.5vw;
+    margin-left: 7vw;
+    width: 3.5vw;
 }
 .icon3 {
-    margin-top: 3.5vw;
+    margin-top: 3vw;
     margin-left: 5vw;
-    width: 6vw;
+    width: 4vw;
 }
 .icon4 {
     margin-left: 6vw;
-    margin-top: 3.5vw;
+    margin-top: 3vw;
+    width: 8vw;
 }
 
 
 .textr2 {
-    margin-top: 3vw;
+    margin-top: 7vw;
 }
 
 .textr2 p {
-    padding-right: 2vw;
-    margin-bottom: 2vw;
+    padding-right: 2.5vw;
+    margin-bottom: 1.5vw;
 }
 
 .textr2 a {
@@ -97,11 +102,11 @@
     font-weight: bold;
 }
 .right2{
-    top: 221vw;
+    top: 240vw;
 }
 
 .right3{
-    top: 268vw;
+    top: 292vw;
 }
 
 
