--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -1,59 +1,62 @@
 .bgfoot1{
     width: 100vw;
-    height: 38vw;
-    background: linear-gradient(90deg, #d96342 50%, #333132 50%);
-    
+    height: 28.5vw;
+    background: linear-gradient(90deg, #842c1e 50%, #333132 50%);
+
+  
 }
 
 .craft{
     display: inline-block;
     background-color: white;
-    margin: 1.5vw;
-    height: 35vw;
+    margin: 1.2vw;
+    height: 26vw;
     width: 97vw;
 }
 .craft p {
     text-align: center;
     padding-top: 2vw;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
 }
 
 .teamicon{
     display: flex;
     justify-content: space-between;
-    padding: 0vw 17vw;
-    margin-bottom: 5vw;
+    padding: 0vw 20vw;
+    margin-bottom: 3vw;
+}
+.teamicon p{
+  font-size: 1vw;
 }
 
 .logo1{
-   width: 13vw;
-   padding-left: 1vw;
+   width: 9.5vw;
 }
 .logo2{
-    width: 12vw;
-    padding-left: 5vw;
+    width: 8.5vw;
+    padding-left: 3vw;
  }
 
 .craft button {
-    margin-left: 42.5vw;
+    margin-left: 43.5vw;
     border: 0.1vw solid transparent;
     background-color: #bf5c40;
-    padding: 0.75vw 1.75vw;
+    padding: 0.5vw 1.5vw;
     text-decoration: none;
     color: white;
-    font-size: 1.2vw;
+    font-size: 1vw;
 }
 
 .craft a{
     display: inline-block;
-    margin-left: 42.5vw;
-    margin-top: 2vw;
+    margin-left: 43.5vw;
+    margin-top: 1vw;
     text-decoration: none;
     color: #bf5c40;
-    font-size: 1.8vw;
+    font-size: 1.5vw;
     border-top: 0.1vw solid #bf5c40;
     border-bottom: 0.1vw solid #bf5c40;
-    padding: 0.5vw 0.4vw;
+    padding: 0.5vw 0.55vw;
 }
 .craft a:hover{
     color: #bf5c40;
@@ -61,13 +64,17 @@
 
 .moreinfo{
     background-color: #333132;
-    height: 29vw;  
+    height: 23vw;  
     border-top: 0.15vw solid #bf5c40;
 }
 .moreetc{
     display: flex;
-    padding: 0vw 5vw;
+    padding: 0vw 15vw;
     justify-content: space-around;
+}
+
+.shop{
+   margin-right: 3vw;
 }
  .infoetc{
     display: flex;
@@ -77,11 +84,11 @@
  }
 
  .infoetc h4{
-    font-size: 0.9vw;
-    margin-bottom: 1.5vw;
+    font-size: 0.7vw;
+    margin-bottom: 1vw;
  }
  .infoetc a{
-    font-size: 0.8vw;
+    font-size: 0.6vw;
     margin-bottom: 0.5vw;
     text-decoration: none;
     color: white;
@@ -90,13 +97,13 @@
  .follow {
     display: flex;
     justify-content: space-between;
-    margin-top: 2vw;
-    margin-left: 8vw;
-    margin-right: 8vw;
-    padding-top: 1vw;
+    margin-top: 1vw;
+    margin-left: 16vw;
+    margin-right: 16vw;
+    padding-top: 0.8vw;
     border-top: 0.1vw solid white;
     color: white;
-    font-size: 0.8vw;
+    font-size: 0.6vw;
  }
 .follow a{
     padding: 0vw 0.75vw;
@@ -111,38 +118,38 @@
 }
 .social p{
     padding-right: 0.5vw;
-    padding-top: 0.5vw;
+    padding-top: 0.2vw;
 }
  .social img{
-    width: 3vw;
-    height: 2vw;
-    padding: 0vw 0.5vw;
+    width: 2vw;
+    height: 1.5vw;
+    padding: 0vw 0.2vw;
  }
 
  .descrip{
-    height: 10vw;
+    height: 9vw;
     background-color: #e6e6e7;
-    padding: 2.2vw 10vw;
+    padding: 1.5vw 19vw;
  }
 
  .descrip p{
     text-align: center;
-    font-size: 0.7vw;
+    font-size: 0.6vw;
     line-height: 1.2vw;
  }
  .contact {
     display: flex;
     justify-content: space-between;
-    padding: 4vw 7vw;
+    padding: 2.5vw 18vw;
  }
 
  .copyright{
     display: flex;
     flex-direction: column;
-    font-size: 0.7vw;
+    font-size: 0.6vw;
  }
  .copyright img{
-    width: 6.5vw;
+    width: 4.5vw;
     margin-bottom: 1vw;  
  }
  .copyright a{
@@ -154,6 +161,6 @@
  }
  .address p{
     padding-top: 2vw;
-    font-size: 0.7vw;
+    font-size: 0.6vw;
     text-align: end;
  }
