--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -1,8 +1,8 @@
 .header{
     display: flex;
     justify-content: space-between;
-    height: 4.4vw;
-    padding: 0 3vw;
+    height: 3.4vw;
+    padding: 0 2vw;
     background-color: white;
     border-bottom: 0.2vw solid #bf5c40;
     position: fixed;
@@ -11,7 +11,7 @@
 
 }
 .logocapita img{
-    width: 8.5vw;
+    width: 6vw;
     margin-top: 0.3vw;
     
 }
@@ -21,7 +21,7 @@
 .language{
     display: flex;
     margin-right: 1.5vw;
-    margin-top: 1.2vw;
+    margin-top: 0.8vw;
     
 }
 .language p{
@@ -29,15 +29,18 @@
     
 }
 
+
 .btnregis{
     text-decoration: none;
-    border: 0.15vw solid #bf5c40;
     color: #bf5c40;
-    height: 2.8vw;
-    padding: 0.4vw 1.2vw 0vw 1.2vw;
-    margin-top: 0.7vw;
-    font-size: 1vw;
+    margin-top: 1vw;
+    font-size: 0.7vw;
     font-weight: bold;
+}
+
+.btnregis a{
+    border: 0.15vw solid #bf5c40;
+    padding: 0.35vw 1.25vw 0.45vw 1.25vw;
 }
 
 .en {
