--- a/src/component/choices.css
+++ b/src/component/choices.css
@@ -8,6 +8,7 @@
     text-align: center;
     color: #bf5c40;
     margin-bottom: 2vw;
+    font-size: 2vw;
 }
 
 .floorplan{
@@ -23,6 +24,7 @@
 .selectlevel p{
     padding: 0.25vw 0vw 0vw 2.5vw;
     cursor: pointer;
+    font-size: 1.1vw;
 }
 .imglevel img{
     margin-left: 3vw;
@@ -38,4 +40,159 @@
 
 #floor3{
     color: #bf5c40;
+}
+
+#plus3-1{
+    color: white;
+    position: absolute;
+    left: 80.7vw;
+    top: 78vw;
+}
+#plus3-2{
+    color: white;
+    position: absolute;
+    left: 27.7vw;
+    top: 78vw;
+}
+#plus4-1{
+    color: white;
+    position: absolute;
+    left: 83.7vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus4-2{
+    color: white;
+    position: absolute;
+    left: 65.5vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus4-3{
+    color: white;
+    position: absolute;
+    left: 40.6vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus4-4{
+    color: white;
+    position: absolute;
+    left: 22vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus1-1{
+    color: white;
+    position: absolute;
+    left: 83.7vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus1-2{
+    color: white;
+    position: absolute;
+    left: 65.5vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus1-3{
+    color: white;
+    position: absolute;
+    left: 40.6vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus1-4{
+    color: white;
+    position: absolute;
+    left: 22vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus2-1{
+    color: white;
+    position: absolute;
+    left: 81.1vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus2-2{
+    color: white;
+    position: absolute;
+    left: 61vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus2-3{
+    color: white;
+    position: absolute;
+    left: 46.2vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus2-4{
+    color: white;
+    position: absolute;
+    left: 27.2vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus15-1{
+    color: white;
+    position: absolute;
+    left: 79.6vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus15-2{
+    color: white;
+    position: absolute;
+    left: 60.9vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus15-3{
+    color: white;
+    position: absolute;
+    left: 45.4vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus15-4{
+    color: white;
+    position: absolute;
+    left: 25.4vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus25-1{
+    color: white;
+    position: absolute;
+    left: 65.4vw;
+    top: 77.5vw;
+    display: none;
+}
+#plus25-2{
+    color: white;
+    position: absolute;
+    left: 42.7vw;
+    top: 77.5vw;
+    display: none;
+}
+
+.planpopup{ 
+    width: 90%;
+    height: 80%;
+}
+
+.plandetail {
+    display: flex;
+}
+
+.popuplogo img{
+    width: 7vw;
+}
+.planimg img{
+    width: 60vw;
 }
