--- a/src/component/facilitie.css
+++ b/src/component/facilitie.css
@@ -5,7 +5,7 @@
 
 .disclaimer2 {
     text-align: center;
-    font-size: 0.5vw;
+    font-size: 0.6vw;
     padding: 0vw 18.5vw;
     margin-bottom: 5vw;
     margin-top: 1vw;
@@ -35,26 +35,31 @@
 }
 .levelplan{
     display: flex;
+    justify-content: space-between;
     padding: 0 5vw;
     margin-top: 2vw;
 }
 
-.indoor{
-    margin-left: 3vw;
-}
+
 .outdoor h3, .indoor h3{
-    font-size: 1vw;
+    font-size: 1.2vw;
+    margin-left: 2vw;
+    margin-bottom: 1.5vw;
 }
 .rowout{
     display: flex;
 }
 .colout{
-    margin-right: 7vw;
-
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 .colout p{  
-    font-size: 0.7vw;
+    font-size: 0.9vw;
     margin-bottom: 0.5vw;
+}
+
+.rowlv3 {
+    margin-right: 6.5vw;
 }
 
 
