--- a/src/component/choices.css
+++ b/src/component/choices.css
@@ -203,17 +203,29 @@
     display: none;
 }
 
-.planpopup {
-    position: absolute;
-    position: fixed;
-    left:3.2vw;
-    top: 4vw;
-    width: 94%;
-    height: 85%;
-    background-color: white;
-    z-index: 3;
-    padding: 1vw 1.5vw;
+.modal{
     display: none;
+    position: fixed;
+    z-index: 3;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0, 0, 0, 0.7); 
+    width: 100%; 
+    height: 100%; 
+    left: 0;
+    top: 0;
+    padding: 4vw 3.5vw;
+}
+.close {
+    color: #bf5c40;
+    float: right;
+    font-size: 3.5vw;
+    cursor: pointer;
+  }
+.planpopup {
+    width: 100%;
+    background-color: white;  
+    padding: 1vw 1.5vw;
+    
 }
 
 .planpopup p {
@@ -229,9 +241,10 @@
 }
 
 .popuplogo img {
-    margin-left: 5vw;
+    margin-left: 4vw;
     width: 9vw;
     padding-bottom: 2vw;
+    margin-right: 4vw;
     
 }
 
@@ -249,10 +262,11 @@
 .planimg img {
     width: 65vw;
     margin-top: 2vw;
+    
 }
 
 .borderdetail{
     border-bottom: 0.1vw solid black;
     margin-bottom: 1vw;
-    padding-right: 5vw;
+    
 }
