--- a/src/component/gallaryart.css
+++ b/src/component/gallaryart.css
@@ -27,12 +27,15 @@
 .facade2{
     width: 35vw;
     margin-left: 25vw;
+    
 }
 .facade3{
     width: 25vw;
     height: 28vw;
     margin-left: 1.5vw;
-    margin-top: 6.5vw;
+    margin-top: 7vw;
+    object-fit: cover;
+   
 }
 .rgallary p{
     color: #bf5c40;
@@ -42,17 +45,24 @@
     padding-top: 10vw;
     padding-left: 1vw;
     padding-bottom: 1vw;
+    line-height: 2vw;
 }
+
 .rgallary2{
     margin-left: 7vw;
 }
 .rgallary2 p{
     color: #bf5c40;
-    margin-left: 13vw;
+    margin-left: 1.7vw;
     font-size: 2vw;
     border-right: 0.1vw solid #bf5c40;
     padding-top: 10vw;
     padding-bottom: 1vw;
+    padding-right: 1vw;
+    line-height: 2vw;
+}
+.rgallary3 p{
+    margin-left: 1.5vw;
 }
 .lgallary2{
     margin-left: 1.5vw;
@@ -64,14 +74,16 @@
 .outdoor3{
     width: 23.5vw;
     height: 23vw;
-    margin-top: 6vw;
+    margin-top: 7vw;
+    object-fit: cover;
+
 }
 .Riviere3{
     width: 23.5vw;
     height: 33vw;
     margin-top: 6vw;
     object-fit: cover;
-    object-position: center 82%;
+    
 }
 .jardin3{
     width: 25vw;
@@ -79,5 +91,95 @@
     margin-left: 1.5vw;
     margin-top: 6.5vw;
     object-fit: cover;
-    object-position: center 82%;
+    
+}
+
+.bwimg{
+    filter: grayscale(80%);
+}
+
+.bwimg:hover {
+    transition: 1000ms;
+    filter: grayscale(0%);
+}
+
+.moreitem{
+    display: flex;
+}
+#plusitem1{
+    color: #bf5c40;
+    margin-top: 9.5vw;
+    margin-left: 1vw;
+}
+#plusitem2{
+    color: #bf5c40;
+    margin-top: 10.5vw;
+    margin-left: 8.5vw;
+}
+
+#plusitem3{
+    color: #bf5c40;
+    margin-top: 10.5vw;
+    margin-left: 1vw;
+}
+
+#plusitem4{
+    color: #bf5c40;
+    margin-top: 9.5vw;
+    margin-left: 11.5vw;
+}
+
+#plusitem5{
+    color: #bf5c40;
+    margin-top: 9.5vw;
+    margin-left: 1vw;
+}
+
+.modal2 {
+    display: none;
+    position: fixed;
+    z-index: 3; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    background-color: #9e9e9e; 
+    padding: 0 8vw;
+
+  }
+  .modal2-content {
+    margin: 0 0;
+  }
+
+  .modal2-content img{
+    height: 47.8vw;
+  }
+
+
+
+  .close {
+    position: absolute;
+    top: 0;
+    right: 1vw;
+    color: #bf5c40;
+    font-size: 2.5vw;
+    cursor: pointer;
+  }
+
+.mySlides{
+    display: none;
+}
+
+.next{
+    position: absolute;
+    right: 0;
+    top:45%;
+    color: #bf5c40;
+}
+
+.prev{
+    position: absolute;
+    left: 0;
+    top:45%;
+    color: #bf5c40;
 }
