--- a/src/component/gallaryart.css
+++ b/src/component/gallaryart.css
@@ -108,30 +108,30 @@
 }
 #plusitem1{
     color: #bf5c40;
-    margin-top: 9.5vw;
+    margin-top: 10vw;
     margin-left: 1vw;
 }
 #plusitem2{
     color: #bf5c40;
-    margin-top: 10.5vw;
+    margin-top: 11vw;
     margin-left: 8.5vw;
 }
 
 #plusitem3{
     color: #bf5c40;
-    margin-top: 10.5vw;
+    margin-top: 11vw;
     margin-left: 1vw;
 }
 
 #plusitem4{
     color: #bf5c40;
-    margin-top: 9.5vw;
+    margin-top: 10vw;
     margin-left: 11.5vw;
 }
 
 #plusitem5{
     color: #bf5c40;
-    margin-top: 9.5vw;
+    margin-top: 10vw;
     margin-left: 1vw;
 }
 
@@ -140,19 +140,26 @@
     position: fixed;
     z-index: 3; 
     left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
+    top: 0vw;
+    width: 100vw; 
+    height: 100%;
     background-color: #9e9e9e; 
-  
   }
   .modal2-content {
-    margin: auto;
-    width: 85%;
+    width: 100% ;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center
   }
 
   .modal2-content img{
-    height: 47.8vw; 
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+ 
   }
 
 
@@ -162,24 +169,23 @@
     top: 0;
     right: 1vw;
     color: #bf5c40;
-    font-size: 2.5vw;
+    font-size: 3vw;
     cursor: pointer;
+    z-index: 5;
   }
 
-.mySlides{
-    display: none;
-}
+
 
 .next{
     position: absolute;
-    right: 0;
-    top:45%;
+    right: 0.5vw;
+    top:50%;
     color: #bf5c40;
 }
 
 .prev{
     position: absolute;
-    left: 0;
-    top:45%;
+    left: 0vw;
+    top:50%;
     color: #bf5c40;
 }
